chore: Remove SQL migration files from Git and update .gitignore
- SQL 파일은 민감한 데이터베이스 구조 정보 포함 가능
- Supabase 수동 마이그레이션은 로컬에서만 관리
- .gitignore에 *.sql 패턴 추가 (prisma/schema.prisma 제외)
- 보안 강화 및 환경별 마이그레이션 전략 분리

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ next-env.d.ts
 
 /src/generated/prisma
 .env*.local
+
+# SQL migration files (Supabase manual migrations)
+migration_*.sql
+*.sql
+!prisma/schema.prisma
